[package]
name = "spl-ac-seq-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.27.0"
async-recursion = "1.0.4"
base64 = "0.21.0"
bincode = "1.3.3"
borsh = "0.10.3"
bs58 = "0.4.0"
reqwest = "0.11.16"
serde = "1.0.160"
serde_json = "1.0.96"
solana-client = "1.15.2"
solana-rpc = "1.15.2"
solana-sdk = "1.15.2"
solana-transaction-status = "1.15"
spl-account-compression = { version = "0.1.10", features=["no-entrypoint"]}
spl-concurrent-merkle-tree = {version="0.1.3" }
spl-noop = { version ="0.1.3", features=["no-entrypoint"]}
thiserror = "1.0.40"
tokio = { version = "1", features = ["full"] }
